fix(logo): display in dark mode

--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -59,9 +59,5 @@
         :root {
             --color-background: #181818;
         }
-
-        img {
-            content: url("../logo-dark.svg");
-        }
     }
 }
